# flappy-bird

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
extlibs/SFML/extlibs/: libjpeg.9.dylib
include/: AssetManager.hpp  Bird.hpp  Collision.hpp  DEFINITIONS.hpp  Flash.hpp  Game.hpp  GameOverState.hpp  GameState.hpp  HUD.hpp  InputManager.hpp  Land.hpp  MainMenuState.hpp  Pipe.hpp  SplashState.hpp  State.hpp  StateMachine.hpp
src/: AssetManager.cpp  Bird.cpp  CMakeLists.txt  Collision.cpp  Flash.cpp  Game.cpp  GameOverState.cpp  GameState.cpp  HUD.cpp  InputManager.cpp  Land.cpp  MainMenuState.cpp  Pipe.cpp  SplashState.cpp  StateMachine.cpp  main.cpp
